--- a/visualizations/0-Solver-0/list/1.0.0/simple/css/styles.css
+++ b/visualizations/0-Solver-0/list/1.0.0/simple/css/styles.css
@@ -8,6 +8,8 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+	width: 600px;
+	height: 600px;
 }
 .group {
     background-color: rgb(255, 255, 255);
